deploy: b2230fb8a7f707b073addc0e3dc0f4913428b598

--- a/source/yearn_treasury.rules.other_income.html
+++ b/source/yearn_treasury.rules.other_income.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="yearn_treasury.rules.revenue package" href="yearn_treasury.rules.revenue.html" />
-    <link rel="prev" title="yearn_treasury.rules.cost_of_revenue package" href="yearn_treasury.rules.cost_of_revenue.html" /> 
+    <link rel="prev" title="yearn_treasury.rules.expense package" href="yearn_treasury.rules.expense.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -101,7 +101,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="yearn_treasury.rules.cost_of_revenue.html" class="btn btn-neutral float-left" title="yearn_treasury.rules.cost_of_revenue package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="yearn_treasury.rules.expense.html" class="btn btn-neutral float-left" title="yearn_treasury.rules.expense package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="yearn_treasury.rules.revenue.html" class="btn btn-neutral float-right" title="yearn_treasury.rules.revenue package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
