deploy: e429b708a2d013c6127c563cca57c448fa202f1e

--- a/source/yearn_treasury.rules.expense.html
+++ b/source/yearn_treasury.rules.expense.html
@@ -19,7 +19,7 @@
     <script src="../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="yearn_treasury.rules.other_income package" href="yearn_treasury.rules.other_income.html" />
+    <link rel="next" title="yearn_treasury.rules.ignore package" href="yearn_treasury.rules.ignore.html" />
     <link rel="prev" title="yearn_treasury.rules.cost_of_revenue package" href="yearn_treasury.rules.cost_of_revenue.html" /> 
 </head>
 
@@ -117,7 +117,7 @@
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="yearn_treasury.rules.cost_of_revenue.html" class="btn btn-neutral float-left" title="yearn_treasury.rules.cost_of_revenue package" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="yearn_treasury.rules.other_income.html" class="btn btn-neutral float-right" title="yearn_treasury.rules.other_income package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="yearn_treasury.rules.ignore.html" class="btn btn-neutral float-right" title="yearn_treasury.rules.ignore package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
