deploy: ddf7569fb7530f8f160ef0a664c0c2d7a736564b

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -71,6 +71,34 @@
              
   <h1>All modules for which code is available</h1>
 <ul><li><a href="yearn_treasury/budget/_request.html">yearn_treasury.budget._request</a></li>
+<li><a href="yearn_treasury/constants.html">yearn_treasury.constants</a></li>
+<li><a href="yearn_treasury/rules/cost_of_revenue/gas.html">yearn_treasury.rules.cost_of_revenue.gas</a></li>
+<li><a href="yearn_treasury/rules/expense/general.html">yearn_treasury.rules.expense.general</a></li>
+<li><a href="yearn_treasury/rules/expense/infrastructure.html">yearn_treasury.rules.expense.infrastructure</a></li>
+<li><a href="yearn_treasury/rules/expense/people.html">yearn_treasury.rules.expense.people</a></li>
+<li><a href="yearn_treasury/rules/expense/security.html">yearn_treasury.rules.expense.security</a></li>
+<li><a href="yearn_treasury/rules/ignore/general.html">yearn_treasury.rules.ignore.general</a></li>
+<li><a href="yearn_treasury/rules/ignore/maker.html">yearn_treasury.rules.ignore.maker</a></li>
+<li><a href="yearn_treasury/rules/ignore/passthru.html">yearn_treasury.rules.ignore.passthru</a></li>
+<li><a href="yearn_treasury/rules/ignore/staking.html">yearn_treasury.rules.ignore.staking</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/aave.html">yearn_treasury.rules.ignore.swaps.aave</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/compound.html">yearn_treasury.rules.ignore.swaps.compound</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
+<li><a href="yearn_treasury/rules/ignore/weth.html">yearn_treasury.rules.ignore.weth</a></li>
+<li><a href="yearn_treasury/rules/ignore/ygov.html">yearn_treasury.rules.ignore.ygov</a></li>
+<li><a href="yearn_treasury/rules/other_expense/boost.html">yearn_treasury.rules.other_expense.boost</a></li>
+<li><a href="yearn_treasury/rules/other_expense/bugs.html">yearn_treasury.rules.other_expense.bugs</a></li>
+<li><a href="yearn_treasury/rules/other_expense/donations.html">yearn_treasury.rules.other_expense.donations</a></li>
+<li><a href="yearn_treasury/rules/other_expense/dyfi.html">yearn_treasury.rules.other_expense.dyfi</a></li>
+<li><a href="yearn_treasury/rules/other_expense/events.html">yearn_treasury.rules.other_expense.events</a></li>
+<li><a href="yearn_treasury/rules/other_expense/misc.html">yearn_treasury.rules.other_expense.misc</a></li>
+<li><a href="yearn_treasury/rules/other_income.html">yearn_treasury.rules.other_income</a></li>
+<li><a href="yearn_treasury/rules/revenue/bribes.html">yearn_treasury.rules.revenue.bribes</a></li>
+<li><a href="yearn_treasury/rules/revenue/farming.html">yearn_treasury.rules.revenue.farming</a></li>
+<li><a href="yearn_treasury/rules/revenue/keepcoins.html">yearn_treasury.rules.revenue.keepcoins</a></li>
+<li><a href="yearn_treasury/rules/revenue/seasolver.html">yearn_treasury.rules.revenue.seasolver</a></li>
+<li><a href="yearn_treasury/rules/revenue/vaults.html">yearn_treasury.rules.revenue.vaults</a></li>
+<li><a href="yearn_treasury/rules/revenue/yteams.html">yearn_treasury.rules.revenue.yteams</a></li>
 </ul>
 
            </div>
