--- a/source/modules.html
+++ b/source/modules.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="yearn_treasury package" href="yearn_treasury.html" />
-    <link rel="prev" title="Welcome to yearn-treasury’s documentation!" href="../index.html" /> 
+    <link rel="prev" title="Yearn Treasury" href="../index.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -126,7 +126,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../index.html" class="btn btn-neutral float-left" title="Welcome to yearn-treasury’s documentation!" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../index.html" class="btn btn-neutral float-left" title="Yearn Treasury" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="yearn_treasury.html" class="btn btn-neutral float-right" title="yearn_treasury package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
