--- a/genindex.html
+++ b/genindex.html
@@ -507,7 +507,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/yearn_treasury.html#yearn_treasury.constants.Args.wallet">wallet (yearn_treasury.constants.Args attribute)</a>
+      <li><a href="source/yearn_treasury.html#yearn_treasury.constants.Args.wallets">wallets (yearn_treasury.constants.Args attribute)</a>
 </li>
   </ul></td>
 </tr></table>
