--- a/_modules/yearn_treasury/rules/ignore/passthru.html
+++ b/_modules/yearn_treasury/rules/ignore/passthru.html
@@ -100,8 +100,11 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;These are routed thru cowswap with dai as the purchase token.&quot;&quot;&quot;</span>
     <span class="n">yswaps</span> <span class="o">=</span> <span class="s2">&quot;0x7d2aB9CA511EBD6F03971Fb417d3492aA82513f0&quot;</span>
     <span class="n">ymechs</span> <span class="o">=</span> <span class="s2">&quot;0x2C01B4AD51a67E2d8F02208F54dF9aC4c0B778B6&quot;</span>
-    <span class="k">if</span> <span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">yswaps</span> <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">symbol</span> <span class="o">==</span> <span class="s2">&quot;DAI&quot;</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span>
-        <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">ymechs</span> <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">symbol</span> <span class="o">==</span> <span class="s2">&quot;3Crv&quot;</span>
+
+    <span class="n">from_address</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span>
+    <span class="n">symbol</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">symbol</span>
+    <span class="k">if</span> <span class="p">(</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">yswaps</span> <span class="ow">and</span> <span class="n">symbol</span> <span class="o">==</span> <span class="s2">&quot;DAI&quot;</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span>
+        <span class="n">from_address</span> <span class="o">==</span> <span class="n">ymechs</span> <span class="ow">and</span> <span class="n">symbol</span> <span class="o">==</span> <span class="s2">&quot;3Crv&quot;</span>
     <span class="p">):</span>
         <span class="k">if</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">cowswap_router</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">trade</span> <span class="ow">in</span> <span class="n">tx</span><span class="o">.</span><span class="n">get_events</span><span class="p">(</span><span class="s2">&quot;Trade&quot;</span><span class="p">):</span>
