deploy: beaf7ea167e9d9cc752aecebeb047325807b11fb

--- a/genindex.html
+++ b/genindex.html
@@ -250,12 +250,12 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_sent_to_dinoswap">is_sent_to_dinoswap() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.ygov.is_sent_to_ygov">is_sent_to_ygov() (in module yearn_treasury.rules.ignore.ygov)</a>
@@ -296,11 +296,17 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_usds_referral_code">is_usds_referral_code() (in module yearn_treasury.rules.other_income)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_v1_or_v2_vault_deposit">is_v1_or_v2_vault_deposit() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_v1_vault_fees">is_v1_vault_fees() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_v2_vault_fees">is_v2_vault_fees() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_v3_vault_deposit">is_v3_vault_deposit() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_v3_vault_fees">is_v3_vault_fees() (in module yearn_treasury.rules.revenue.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_vault_deposit">is_vault_deposit() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_vesting">is_vesting() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
@@ -403,6 +409,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">yearn_treasury.rules.ignore.swaps.compound</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">yearn_treasury.rules.ignore.swaps.uniswap</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">yearn_treasury.rules.ignore.swaps.vaults</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.html#module-yearn_treasury.rules.ignore.weth">yearn_treasury.rules.ignore.weth</a>
 </li>
@@ -664,6 +672,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    yearn_treasury.rules.ignore.swaps.vaults
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">module</a>
+</li>
+      </ul></li>
       <li>
     yearn_treasury.rules.ignore.weth
 
