--- a/_modules/yearn_treasury/constants.html
+++ b/_modules/yearn_treasury/constants.html
@@ -74,10 +74,12 @@
 <span></span><span class="kn">from</span><span class="w"> </span><span class="nn">pathlib</span><span class="w"> </span><span class="kn">import</span> <span class="n">Path</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Final</span><span class="p">,</span> <span class="n">Set</span>
 
+<span class="kn">import</span><span class="w"> </span><span class="nn">y.constants</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">eth_typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">BlockNumber</span><span class="p">,</span> <span class="n">ChecksumAddress</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">y</span><span class="w"> </span><span class="kn">import</span> <span class="n">Network</span><span class="p">,</span> <span class="n">convert</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">y.constants</span><span class="w"> </span><span class="kn">import</span> <span class="n">CHAINID</span>
 
+
+<span class="n">CHAINID</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">y</span><span class="o">.</span><span class="n">constants</span><span class="o">.</span><span class="n">CHAINID</span>
 
 <span class="n">EEE_ADDRESS</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="s2">&quot;0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE&quot;</span>
 <span class="n">ZERO_ADDRESS</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="s2">&quot;0x0000000000000000000000000000000000000000&quot;</span>
