--- a/genindex.html
+++ b/genindex.html
@@ -202,7 +202,11 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_dola_bribe">is_dola_bribe() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_dola_frax_withdrawal">is_dola_frax_withdrawal() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_dolafraxbp_fees">is_dolafraxbp_fees() (in module yearn_treasury.rules.revenue.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_dolla_fed_withdrawal">is_dolla_fed_withdrawal() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_double_fee_reimbursement">is_double_fee_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
@@ -252,10 +256,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_sent_to_dinoswap">is_sent_to_dinoswap() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.ygov.is_sent_to_ygov">is_sent_to_ygov() (in module yearn_treasury.rules.ignore.ygov)</a>
