--- a/_modules/index.html
+++ b/_modules/index.html
@@ -87,6 +87,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/yla.html">yearn_treasury.rules.ignore.swaps.yla</a></li>
 <li><a href="yearn_treasury/rules/ignore/weth.html">yearn_treasury.rules.ignore.weth</a></li>
 <li><a href="yearn_treasury/rules/ignore/ygov.html">yearn_treasury.rules.ignore.ygov</a></li>
 <li><a href="yearn_treasury/rules/other_expense/boost.html">yearn_treasury.rules.other_expense.boost</a></li>
