deploy: 056b08dbd0b4bf0e1b1f9eee31a97528f2b35348

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -86,6 +86,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/gearbox.html">yearn_treasury.rules.ignore.swaps.gearbox</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/unwrapper.html">yearn_treasury.rules.ignore.swaps.unwrapper</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yla.html">yearn_treasury.rules.ignore.swaps.yla</a></li>
 <li><a href="yearn_treasury/rules/ignore/weth.html">yearn_treasury.rules.ignore.weth</a></li>
