--- a/genindex.html
+++ b/genindex.html
@@ -260,10 +260,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_sent_to_dinoswap">is_sent_to_dinoswap() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -299,6 +299,8 @@
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_uniswap_swap">is_uniswap_swap() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_uniswap_withdrawal">is_uniswap_withdrawal() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.unwrapper.is_unwrapper">is_unwrapper() (in module yearn_treasury.rules.ignore.swaps.unwrapper)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.maker.is_usdc_cdp_deposit">is_usdc_cdp_deposit() (in module yearn_treasury.rules.ignore.maker)</a>
 </li>
@@ -427,6 +429,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.pooltogether">yearn_treasury.rules.ignore.swaps.pooltogether</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">yearn_treasury.rules.ignore.swaps.uniswap</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.unwrapper">yearn_treasury.rules.ignore.swaps.unwrapper</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">yearn_treasury.rules.ignore.swaps.vaults</a>
 </li>
@@ -706,6 +710,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    yearn_treasury.rules.ignore.swaps.unwrapper
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.unwrapper">module</a>
+</li>
+      </ul></li>
       <li>
     yearn_treasury.rules.ignore.swaps.vaults
 
